k8s/flask_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-dep
  labels:
    app: flask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: lobsterpizzax/flask:latest
        ports:
        - containerPort: 8080
      imagePullSecrets:
      -  name: regcred
