k8s/flask_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: flask-pod
  labels:
    app: flask
spec:
  containers:
  - name: flask
    image: lobsterpizzax/flask:latest
#  ImagePullSecrets:
#  - name: regcred
