k8s/flask_nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service-nodeport
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: flask
  type: NodePort
