k8s/flask_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-svc
  labels:
    app: flask
spec:
  type: LoadBalancer 
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: flask
