k8s/flask_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: flask-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: flask.com
    http:
      paths:
      - backend:
          service:
            name: flask-service-nodeport
            port:
              number: 8080
        path: /
        pathType: Prefix
